@@ -1,7 +1,7 @@
 
 EXAMPLES = example.dup example.ldap example.makecd example.mysql \
-		   example.pgsql example.rdiff example.sh example.svn example.sys \
-		   example.trac
+		example.pgsql example.rdiff example.rsnap example.sh \
+		example.svn example.sys example.trac
 
 EXTRA_DIST = $(EXAMPLES)
 
