@@ -1,6 +1,6 @@
 
 HANDLERS = dup dup.helper maildir mysql.helper rdiff sys makecd makecd.helper \
-		rdiff.helper sys.helper ldap pgsql sh trac \
+		rdiff.helper rsnap rub sys.helper ldap pgsql sh trac \
 		ldap.helper mysql pgsql.helper svn
 
 EXTRA_DIST = Makefile.am $(HANDLERS)
